# COMP417_Fall2019

./: .gitignore  README.md
assign1_comp417/: CMakeLists.txt  README.md  package.xml  setup.py
assign1_comp417/launch/: follow_waypoints.launch  publish_waypoints_stub.launch.launch  question3.launch  robot_description.launch  world.launch
assign1_comp417/materials/: map.material
assign1_comp417/plans/: test_plan.pkl
assign1_comp417/python/: astar_planner.py  follow_waypoints_node.py  plotting_utils.py  publish_waypoints.py  rrt_planner.py
assign1_comp417/rviz/: follow_waypoints.rviz
assign1_comp417/urdf/: robot_model.gazebo  robot_model.xacro
assign1_comp417/worlds/: map.world
estimation_assignment/python/: localization.py  occupancy_grid_mapper.py
lqr_question/: cartpole.py  cartpole_learn.py  plant.py
particle_filter_question/: CMakeLists.txt  package.xml  setup.py
particle_filter_question/launch/: monte_carlo_localization_v2.launch  occupancy_grid_reader.launch
pid_question/: helpers.py  interface_obj.py  main.py  pid.py  pid_plotter.py  pid_plotter_vispy.py  sim_env.py  sim_obj.py
pid_question/pid_pics/: pics.csv
website/: index.html  push_web.bash
website/quizzes/: quiz0.docx
website/slides/: COMP417-Lecture12-ExtendedKalmanFilter.pptx  COMP417-Lecture13-ParticleFilters.pptx  COMP417-Lecture16-OptimalControl.pptx  COMP417-Lecture17-LQR.pptx  COMP417-Lecture8-ParameterEstimation.pptx
website/tutorials/: .~lock.Tutorial1_ROS.pptx#  LinearAlgebra_Tutorial.pptx  Tutorial1_ROS.odp  Tutorial1_ROS.pptx
